# thingino-accel

./: .gitignore  AEC_T41_16K_NS_OUT_UC.mgk  AEC_T41_16K_NS_OUT_UC.mgk_hlil.txt  DEVELOPMENT.md  Makefile  NEXT_STEPS.md  QUICKSTART.md  README.md  RESUME_PROMPT.md  REVERSE_ENGINEERING.md  VENUS_IMPLEMENTATION_STATUS.md  build.sh  ld-musl-mipsel.so.1  log.txt  mgk_weights.npz
include/: aip.h  (+15 more)
mars-compiler/: Cargo.toml  build.rs
mars-compiler/src/: main.rs  mars_format.rs  onnx_parser.rs
mgk-decompiler/: Cargo.toml  MGK_FORMAT.md  aec_model.onnx  aec_model.pt  aec_model_with_weights.onnx  decompiled.onnx  mgk_decompiler.py  model.onnx  output.json  output_v2.json  output_v3.json  test_yolo_inference.py  yolo_model.onnx
mgk-decompiler/extracted/: comprehensive_analysis.json  layer_analysis.json  layer_mapping.json  metadata.json  model_analysis.json  weight_structure.json
mgk-decompiler/extracted_aec/: layer_002_QuantizeFeature.npy  layer_004_QuantizeFeature.npy  layer_014_QuantizeFeature.npy
mgk-decompiler/extracted_aec_full/: metadata.json
mgk-decompiler/extracted_aec_py/: layer_008_QuantizeFeature.npy  layer_010_QuantizeFeature.npy  layer_016_QuantizeFeature.npy
mgk-decompiler/extracted_final/: gru_weight_structure.json  layer_scale_mapping.json  mgk_format_spec.json  model.json  quantization_scales.json
mgk-decompiler/extracted_v2/: model_metadata.json
mgk-decompiler/extracted_v3/: model_complete.json  model_summary.json
mgk-decompiler/extracted_yolo/: layer_000_Quantize.npy  layer_001_Quantize.npy  layer_414_Quantize.npy  layer_417_Quantize.npy  (+49 more)
(+173 files in other folders)
