[package]
name = "mgk-decompiler"
version = "0.1.0"
edition = "2021"
description = "Decompiler for Ingenic Magik .mgk neural network models to ONNX format"
authors = ["thingino-accel contributors"]

[dependencies]
# ELF parsing
goblin = "0.8"
# C++ symbol demangling
cpp_demangle = "0.4"
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Hex dumping for debugging
hex = "0.4"
# Byte order handling
byteorder = "1.5"

[profile.release]
lto = true
strip = true
